@@ -1,3 +1,10 @@
+Thu Aug 18 13:43:07 1994  Theodore Y. Ts'o  (tytso at tsx-11)
+
+	* mailquery.c: Move usage() before main() to solve redeclaration
+	error.
+
+	* mailquery.c: Add #include <string.h> to fix compiler kvetching.
+
 Tue Aug  9 16:45:53 1994  Tom Yu  (tlyu@dragons-lair)
 
 	* poplib.c: fix stupid sterror bug
